现在处理这个吧
Signed-off-by: boddmg <boddmg@gmail.com>

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -57,11 +57,30 @@
 				</p>
 			</div>
 			<div class="col-md-offset-4 col-md-4">
-				<button type="button" class="btn btn-default" onclick="movement(person1,person2)"  placeholder=".col-md-4">fight</button>
+				<button type="button" class="btn btn-default" onclick="movement(person1,person2)"  placeholder="col-md-4">fight</button>
 			</div>
 		</div>
 	</body>
 	<footer>
+		<script type="text/javascript">
+		
+		var person1Data = {}
+		person1Data.name = 黄安杰 lababy;
+		person1Data.avatarAdd = http://hdn.xnimg.cn/photos/hdn121/20140430/2210/h_head_82tK_e0e1000016a0195a.jpg;
+		person1Data.visitorCount = 2784;
+		person1Data.statusCount = 1101;
+		person1Data.blogCount = 23;
+		person1Data.albumCount = 7;
+		person1Data.shareCount = 0;
+		person1Data.pageCount = 159;
+		person1Data.zhanCount = 0;
+		person1Data.musicCount = 0;
+		person1Data.movieCount = 0;
+		person1Data.photoCount = 0;
+		person1Data.friendCount = 618;
+		
+		</script>
 		<script src="../js/main.js"></script>
+
 	</footer>
 </html>
