--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta content="text/html; charset=UTF-8" http-equiv="content-type">
 		<title></title>
 		<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css">
@@ -65,8 +66,8 @@
 		<script type="text/javascript">
 		
 		var person1Data = {}
-		person1Data.name = 黄安杰 lababy;
-		person1Data.avatarAdd = http://hdn.xnimg.cn/photos/hdn121/20140430/2210/h_head_82tK_e0e1000016a0195a.jpg;
+		person1Data.name = "黄安杰 lababy";
+		person1Data.avatarAdd = "http://hdn.xnimg.cn/photos/hdn121/20140430/2210/h_head_82tK_e0e1000016a0195a.jpg";
 		person1Data.visitorCount = 2784;
 		person1Data.statusCount = 1101;
 		person1Data.blogCount = 23;
@@ -74,6 +75,16 @@
 		person1Data.pageCount = 159;
 		person1Data.friendCount = 618;
 		
+		var person2Data = {}
+		person2Data.name = "abc";
+		person2Data.avatarAdd = "http://hdn.xnimg.cn/photos/hdn121/20140430/2210/h_head_82tK_e0e1000016a0195a.jpg";
+		person2Data.visitorCount = 2784;
+		person2Data.statusCount = 1101;
+		person2Data.blogCount = 23;
+		person2Data.albumCount = 7;
+		person2Data.pageCount = 159;
+		person2Data.friendCount = 618;
+
 		</script>
 		<script src="../js/main.js"></script>
 
