--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta content="text/html; charset=UTF-8" http-equiv="content-type">
+		<meta content="text/html; charset=UTF-8" http-equiv="content-type">
 		<title></title>
 		<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css">
@@ -16,7 +16,10 @@
 						<tbody class="text-center">
 							<tr>
 								<td><p>姓名:</p><p id="name-0"></p></td>
-								<td><img id="avatar-0"></img><img id="avatar-1"></img></td>
+								<td>
+									<img id="avatar-0" style="width:40%;margin:2%;"></img>
+									<img id="avatar-1" style="width:40%;margin:2%;"></img>
+								</td>
 								<td><p>姓名:</p><p id="name-1"></p></td>
 							</tr>
 							<tr>
@@ -76,17 +79,20 @@
 		person1Data.friendCount = 618;
 		
 		var person2Data = {}
-		person2Data.name = "abc";
-		person2Data.avatarAdd = "http://hdn.xnimg.cn/photos/hdn121/20140430/2210/h_head_82tK_e0e1000016a0195a.jpg";
-		person2Data.visitorCount = 2784;
-		person2Data.statusCount = 1101;
-		person2Data.blogCount = 23;
-		person2Data.albumCount = 7;
-		person2Data.pageCount = 159;
-		person2Data.friendCount = 618;
-
+		person2Data.name = "郭耿瑞";
+		person2Data.avatarAdd = "http://hdn.xnimg.cn/photos/hdn221/20130310/1050/h_head_4xDL_3463000037a3113e.jpg";
+		person2Data.visitorCount = 427;
+		person2Data.statusCount = 251;
+		person2Data.blogCount = 0;
+		person2Data.albumCount = 9;
+		person2Data.shareCount = 194;
+		person2Data.pageCount = 82;
+		person2Data.zhanCount = 6;
+		person2Data.musicCount = 0;
+		person2Data.movieCount = 0;
+		person2Data.photoCount = 21;
+		person2Data.friendCount = 292;
 		</script>
 		<script src="../js/main.js"></script>
-
 	</footer>
 </html>
