加了生命值条
Signed-off-by: boddmg <boddmg@gmail.com>

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -23,9 +23,21 @@
 								<td><p>姓名:</p><p id="name-1"></p></td>
 							</tr>
 							<tr>
-								<td><p id="HP-0"></p></td>
+								<td>
+									<div class="progress progress-striped" style="width: 100px;z-index:-1;">
+										<div id="hpbar-0" class="progress-bar progress-bar-danger" role="progressbar" style="width: 100%;">
+										</div>
+									</div>
+									<p id="HP-0" style="z-index:3;"></p>
+								</td>
 								<td><p>HP</p></td>
-								<td><p id="HP-1"></p></td>
+								<td>
+									<div class="progress progress-striped" style="width: 100px;z-index:-1;">
+										<div id="hpbar-1" class="progress-bar progress-bar-danger" role="progressbar" style="width: 100%;">
+										</div>
+									</div>
+									<p id="HP-1" style="z-index:3;"></p>
+								</td>
 							</tr>
 							<tr>
 								<td><p id="atk-0"></p></td>
